[project]
name = "comfyui_tk3r_ext"
version = "1.0.0"
description = "Extended versions of various ComfyUI nodes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
authors = [
    {name = "TK3R"}
]
keywords = ["comfyui", "custom-nodes", "stable-diffusion", "controlnet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Apple Metal",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/TK3R/ComfyUI_TK3R_Ext"
Repository = "https://github.com/TK3R/ComfyUI_TK3R_Ext"
Issues = "https://github.com/TK3R/ComfyUI_TK3R_Ext/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.comfy]
PublisherId = "TK3R"
DisplayName = "TK3R Ext"
requires-comfyui = ">=1.0.0"
